tests/fixtures/errors/unknown_unit.ksr
// error: unknown unit
node x: Length = 100 foobar;
